<resources>
    <string name="app_name">SecondHandMarket</string>
    <string name="title_home">Home</string>
    <string name="title_release">Release</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Account</string>

    <string name="sousuo">搜索</string>
    <string name="commodityname">CommodityName</string>
    <string name="commodityprice">CommodityPrice</string>
    <string name="username">登录/注册</string>
    <string name="waitforpay">未付款</string>
    <string name="waitforsend">未发货</string>
    <string name="waitforreceive">待收货</string>
    <string name="signed">已完成</string>
    <string name="refund">退款</string>
    <string name="text_notifications">消息列表</string>
    <string name="myinformation">修改信息</string>
    <string name="myaddress">我的地址</string>
    <string name="myrelease">我的发布</string>
    <string name="mycart">购物车</string>
    <string name="accounthint">账户</string>
    <string name="passwordhint">密码</string>
    <string name="loginbtn">登录</string>
    <string name="forgetpwd">忘记密码？</string>
    <string name="signin">注册</string>
    <string name="nameofcommodity">商品名称:</string>
    <string name="priceofcommodity">商品价格:</string>
    <string name="describtionofcommodity">商品描述:</string>
    <string name="buttontorelease">上传商品</string>
    <string name="yuan">元</string>
    <string name="tianjiatupian">添加图片</string>
    <string name="signinbutton">注册</string>
    <string name="name">商品名称</string>
    <string name="jiage">价格</string>
    <string name="yishouchu">已售出</string>
    <string name="xinshangchuan">新上传</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">电话</string>
    <string name="code">验证码</string>
    <string name="money1">余额：</string>
    <string name="money2">100</string>
    <string name="getcode">获取验证码</string>
    <string name="messager_name">name</string>
    <string name="notification">unRead</string>
    <string name="typeName">商品类型:</string>
    <string name="deletecommodity">deletecommodity</string>
    <string name="commoditypicture">commodityPicture</string>
    <string name="avatar">我的头像</string>
    <string name="yhm">用户名</string>
    <string name="id">用户ID</string>
    <string name="addr">我的地址</string>
    <string name="submit">确认修改</string>
    <string name="p">id:</string>
    <string name="goodid">货物id</string>
    <string name="nogoods">无商品</string>
    <string name="norecord">无记录</string>
    <string name="selleraddr">卖家地址：</string>
    <string name="test">test</string>
    <string name="buyitnow">立刻购买</string>
    <string name="spzhl">商品种类：</string>
    <string name="spxx">商品信息</string>
    <string name="prompt">选择商品种类</string>
    <string name="re">交易记录</string>
    <string name="mjdz">卖家地址</string>
    <string name="contents">contents</string>
    <string name="deletepic">deletePic</string>
    <string name="picture">picture</string>
    <string name="wutp">无图片</string>
    <string name="jyjl">交易记录</string>
    <string name="maijia">卖家:</string>
    <string name="buyer">买家:</string>

    <string name="sellername">卖家名字</string>
    <string name="selleravatar">selleravatar</string>
    <string name="goodspic">goodspic</string>
    <string name="maijiamz">买家名字</string>
    <string name="account">0</string>
    <string name="货物名称">货物名称</string>
    <string name="cnyuan">￥</string>
    <string name="sure">确认购买</string>
    <string name="wjlj">文件路径</string>
    <string name="addpicture">addPicture</string>
    <string name="textview">TextView</string>
</resources>