<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/record_goods_pic"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_baseline_broken_image_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/goodspic" />
        <TextView
            android:id="@+id/record_goods_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commodityname"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginStart="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/record_goods_pic"/>
        <TextView
            android:id="@+id/record_goods_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commodityprice"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/record_goods_pic"
            app:layout_constraintTop_toBottomOf="@+id/record_goods_name"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuan"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="2dp"
            app:layout_constraintStart_toEndOf="@+id/record_goods_price"
            app:layout_constraintTop_toBottomOf="@id/record_goods_name"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_grey" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/maijia"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"/>
        <ImageView
            android:id="@+id/record_seller_avatar"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:src="@drawable/ic_baseline_account_box_24"
            android:contentDescription="@string/selleravatar" />
        <TextView
            android:id="@+id/record_seller_name"
            android:text="@string/sellername"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"/>
    </GridLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_grey" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/buyer"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"/>
        <TextView
            android:id="@+id/record_buyer_name"
            android:text="@string/maijiamz"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"/>
    </GridLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/dark_grey" />
</LinearLayout>