<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <GridLayout
        android:id="@+id/profile_blank"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_margin="2dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="12dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginTop="12dp"
            android:text="@string/username"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginTop="80dp"
            android:text="@string/money1"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_marginTop="80dp"
            android:text="@string/money2"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="4"
            android:layout_marginTop="80dp"
            android:text="@string/yuan"
            android:textSize="18sp" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/post_balnk"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="6dp"
        android:layout_margin="2dp"
        app:layout_constraintTop_toBottomOf="@id/profile_blank"
        android:orientation="horizontal"
        android:onClick="MainActivityClickListener">
        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/waitforpay"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/waitforsend" />

        <Button
            android:id="@+id/btn3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/waitforreceive" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/signed"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/myrelease"/>

    <TextView
        android:id="@+id/myrelease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:onClick="MainActivityClickListener"
        android:text="@string/myrelease"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/post_balnk"
        tools:ignore="UsingOnClickInXml" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/my_information"/>

    <TextView
        android:id="@+id/my_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myinformation"
        android:textSize="36sp"
        app:layout_constraintTop_toBottomOf="@id/myrelease"
        tools:layout_editor_absoluteX="-1dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/my_information"/>
</androidx.constraintlayout.widget.ConstraintLayout>