<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommodityInformationActivity">
<!--TODO use viewPAger-->
    <ImageView
        android:id="@+id/information_picture"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/commoditypicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_broken_image_24" />

    <TextView
        android:id="@+id/information_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="319dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_picture" />

    <TextView
        android:id="@+id/information_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="313dp"
        android:text="@string/jiage"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_name" />

    <TextView
        android:id="@+id/tc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/describtionofcommodity"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_price"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/test"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tc1"
        app:layout_constraintTop_toBottomOf="@id/information_price" />

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="14dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tc1" />

    <ImageView
        android:id="@+id/commo_info_user_avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_baseline_account_box_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v1" />

    <TextView
        android:id="@+id/commo_info_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@id/commo_info_user_avatar"
        app:layout_constraintTop_toBottomOf="@id/v1" />

    <TextView
        android:id="@+id/commo_info_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/commo_info_user_avatar"
        app:layout_constraintTop_toBottomOf="@id/commo_info_user_name" />

    <TextView
        android:id="@+id/ta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/selleraddr"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/commo_info_user_avatar" />

    <TextView
        android:id="@+id/commo_info_user_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/test"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/ta1"
        app:layout_constraintStart_toEndOf="@+id/ta1"
        app:layout_constraintTop_toBottomOf="@id/commo_info_user_id" />

    <Button
        android:id="@+id/buy_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buyitnow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="15dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>