<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_my_pic"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="2dp"
        android:contentDescription="@string/commoditypicture"
        android:src="@drawable/ic_baseline_broken_image_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_my_nam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/commodityname"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/iv_my_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_my_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goodid"
        android:textSize="14sp"
        android:layout_marginTop="2dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/tv_my_nam"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_my_pri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:text="@string/commodityprice"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/iv_my_pic"
        app:layout_constraintTop_toBottomOf="@+id/tv_my_nam" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuan"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="4dp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_my_pri"
        app:layout_constraintStart_toEndOf="@+id/tv_my_pri" />

    <ImageView
        android:id="@+id/iv_my_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/deletecommodity"
        android:src="@drawable/ic_baseline_delete_forever_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/i"/>

    <View
        android:id="@+id/i"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_my_pic" />


</androidx.constraintlayout.widget.ConstraintLayout>