<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.release.ReleaseFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/add_pic"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_baseline_add_photo_alternate_24"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_gravity="right|bottom"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_grey" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describtionofcommodity"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@id/input_released_commodity_contents"
            app:layout_constraintEnd_toStartOf="@id/input_released_commodity_contents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_released_commodity_contents"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/describtionofcommodity"
            android:hint="@string/contents"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_contents"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priceofcommodity"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@id/input_released_commodity_price"
            app:layout_constraintEnd_toStartOf="@id/input_released_commodity_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_contents" />

        <EditText
            android:id="@+id/input_released_commodity_price"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/yuan"
            android:inputType="number|numberDecimal"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvprice"
            app:layout_constraintTop_toBottomOf="@id/input_released_commodity_contents" />

        <TextView
            android:id="@+id/tvaddr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mjdz"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@id/input_released_commodity_addr"
            app:layout_constraintEnd_toStartOf="@id/input_released_commodity_addr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvprice" />

        <EditText
            android:id="@+id/input_released_commodity_addr"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/mjdz"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvaddr"
            app:layout_constraintTop_toBottomOf="@id/input_released_commodity_price" />

        <TextView
            android:id="@+id/tv_typename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:text="@string/typeName"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/spinner_released_commodity_typename"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvaddr" />

        <Spinner
            android:id="@+id/spinner_released_commodity_typename"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:prompt="@string/prompt"
            app:layout_constraintStart_toEndOf="@id/tv_typename"
            app:layout_constraintTop_toBottomOf="@id/input_released_commodity_addr" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"
            app:layout_constraintTop_toTopOf="@id/release_button" />

        <Button
            android:id="@+id/release_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/buttontorelease"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"
            app:layout_constraintTop_toBottomOf="@id/release_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>