<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/commodityImg"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_baseline_broken_image_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/commodityName"
        android:contentDescription="@string/commoditypicture" />

    <TextView
        android:id="@+id/commodityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commodityname"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/commodityImg"
        android:layout_marginStart="7sp"
        android:layout_marginTop="3sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/commodityPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:text="@string/commodityprice"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/commodityImg"
        app:layout_constraintTop_toBottomOf="@id/commodityName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yuan"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/commodityPrice"
        android:layout_marginStart="3dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/commodityPrice"
        app:layout_constraintTop_toBottomOf="@+id/commodityName" />

    <!--    <ImageView-->
<!--        android:id="@+id/addToCart"-->
<!--        android:layout_width="20dp"-->
<!--        android:layout_height="20dp"-->
<!--        android:layout_marginStart="104dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="24dp"-->
<!--        android:src="@drawable/ic_baseline_add_shopping_cart_24"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>